--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.mail.port=465
 spring.mail.username=vinaychandra3241@gmail.com
 spring.mail.password=ofsaeadnsqkktmve
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.port=465
+
+#spring.mail.properties.mail.smtp.starttls.enable=true
 recipient.email=vinaychandra3241@gmail.com
